freeipa(prueba-statefulset-notgood).yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: freeipa
  namespace: securehub
spec:
  serviceName: freeipa-service
  replicas: 1
  selector:
    matchLabels:
      app: freeipa
  template:
    metadata:
      labels:
        app: freeipa
    spec:
      hostname: freeipa.andion.eu
      subdomain: freeipa
      securityContext:
        fsGroup: 1000
      containers:
      - name: freeipa
        image: freeipa/freeipa-server:rocky-9
        securityContext:
          privileged: true
        ports:
        - containerPort: 80
        - containerPort: 443
        - containerPort: 389
        - containerPort: 636
        - containerPort: 88
        - containerPort: 464
        command: ["/bin/sh", "-c"]
        args:
          - |
            [...]
        startupProbe:
          httpGet:
            path: /
            port: 80
          failureThreshold: 35
          periodSeconds: 30
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 120
          periodSeconds: 30
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 600
          periodSeconds: 60
        volumeMounts:
        - name: freeipa-data
          mountPath: "/var/lib/ipa"
        - name: freeipa-config
          mountPath: "/etc/ipa"
        - name: freeipa-logs
          mountPath: "/var/log/ipa"
      volumes:
      - name: freeipa-data
        persistentVolumeClaim:
          claimName: freeipa-pvc
      - name: freeipa-config
        persistentVolumeClaim:
          claimName: freeipa-config-pvc
      - name: freeipa-logs
        persistentVolumeClaim:
          claimName: freeipa-logs-pvc
