freeipa-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: freeipa
  namespace: securehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: freeipa
  template:
    metadata:
      labels:
        app: freeipa
    spec:
      containers:
        - name: freeipa
          image: freeipa/freeipa-server:rocky-9  
          ports:
            - containerPort: 80
            - containerPort: 443
            - containerPort: 389
            - containerPort: 636
            - containerPort: 88
            - containerPort: 464
          volumeMounts:
            - name: freeipa-data
              mountPath: /data
      volumes:
        - name: freeipa-data
          persistentVolumeClaim:
            claimName: freeipa-pvc
