securehubback-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: securehubback-deployment
  namespace: securehub
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: ghcr.io/strast-upm/securehub_backend:latest
        ports:
        - containerPort: 9000
      imagePullSecrets:
      - name: ghcr-secret
