keycloak-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: securehub
  annotations:
    metallb.universe.tf/address-pool: "primary"
    metallb.universe.tf/allow-shared-ip: "true"
spec:
  selector:
    app: keycloak
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: LoadBalancer
