securehub_front-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: securehub
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: LoadBalancer
