freeipa-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: freeipa-ingress
  namespace: securehub
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: freeipa.andion.eu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: freeipa-service
            port:
              number: 8081
